# MyOpenCVProj

./: .gitignore  CMakeLists.txt  CUtils.hpp  MyOpenCVProjs.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  uic.sh  utils.hpp
OpenCV/BaseOpenCv/: CBaseOpenCV.cpp  CBaseOpenCV.h
OpenCV/BaseView/: CBaseView.cpp  CBaseView.h
OpenCV/CPhotoShop/opencv/: CCutImage.hpp  CRotateImg.hpp
OpenCV/CPhotoShop/views/: CPhotoShopView.cpp  CPhotoShopView.h
OpenCV/CVImageFunc/opencv/: CCVCallBack.hpp  CVImageFunc.hpp
OpenCV/CVImageFunc/views/: CImageFuncView.cpp  CImageFuncView.h
OpenCV/CutImage/opencv/: cutImage.hpp
OpenCV/CutImage/views/: CCutImgView.cpp  CCutImgView.h
OpenCV/HelloWorld/: CHelloWorldView.cpp  CHelloWorldView.h  showImage.hpp
OpenCV/HelloWorld/opencv/: showImage.hpp
OpenCV/HelloWorld/views/: CHelloWorldView.cpp  CHelloWorldView.h
res/text/: textDef.h
